# demosaic

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: demosaic.rs
src/: cfa.rs  error.rs  lab.rs  lib.rs
src/bayer/: ahd_impl.rs  bilinear_impl.rs  mhc_impl.rs  mod.rs  ppg_impl.rs  vng_impl.rs
src/quad_bayer/: bilinear_impl.rs  binning.rs  mod.rs  qppg_impl.rs
src/remosaic/: bilinear_impl.rs  mod.rs
src/xtrans/: bilinear_impl.rs  dht_impl.rs  markesteijn_impl.rs  mod.rs
tests/: integration.rs
